--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 <body>
 <h1>Owls</h1>
 
+<p>Owls are a predatory bird and a badass mofos.</p>
+
+<br>
 <img src="../animals-rule/owl_horned.jpg" alt="Owl">
+<br>
+
+<h2>Owl Facts</h2>
+<ul>
+	<li>There are 200 different types of owl species</li>
+	<li>A group of owls is called a parliament</li>
+	<li>Owls can turn their heads as much as 270 degrees</li>
+</ul>
 
 </body>
 
