--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Owls</h1>
 
-<p>Owls are a predatory bird and a badass mofos.</p>
+<p>Owls are a predatory bird and badass mofos.</p>
 
 <br>
 <img src="../animals-rule/owl_horned.jpg" alt="Owl">
